--- a/client/src/index.css
+++ b/client/src/index.css
@@ -67,6 +67,20 @@ h1, h2, h3, h4, h5, h6, p, .h1, .h2, .h3, .h4, .h5, .h6 {
   width: 70%;
 }
 
+.kittyBtn{
+  color: #FFF;
+  background-color: #C35243;
+  font-family: "Sriracha", sans-serif !important;
+  font-size: 1.4em;
+  border: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 20px;
+  margin-top: 10px;
+}
+
 li {
   list-style: none !important;
 }
